# learnai

./: .dockerignore  .env.example  .env.production.example  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PRODUCTION_CHECKLIST.md  README.md  SECURITY.md  VERCEL_BUILD_FIXES.md  VERCEL_DEPLOYMENT.md  a2a-agent-config.yaml  docker-compose.yml  mcp-catalog.yml  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: ci.yml
agents/professor-interview-agent/: Dockerfile  README.md  contextforge-agent.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/dashboard/: page.tsx
app/explore/: page.tsx
app/learn/: LearnClient.tsx  page.tsx
app/login/: page.tsx
components/: AppLayout.tsx  GuestBanner.tsx  GuestModeButtons.tsx  HeaderActions.tsx  HomeSearchClient.tsx  LoginModal.tsx  MarketingHeader.tsx  PricingSection.tsx  WhiteboardClient.tsx
docs/: mcp-context-forge-analysis.md
lib/: ai.ts  auth.ts  contextforge.ts  paypal.ts  prisma.ts  teams.ts  topProfessors.ts
mcp-server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-server/src/learnai_mcp/: __init__.py  server.py
mcp-server/src/learnai_mcp/a2a/: __init__.py  agent.py
prisma/: schema.prisma  seed.js
scripts/: contextforge-sync.sh  setup-db.sh  setup-env.sh  wait-for-postgres.sh
tests/: conftest.py  test_a2a_agent_health.py  test_contextforge_health.py  test_mcp_server_health.py
types/: index.ts
(+15 files in other folders)
