[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learnai-mcp-server"
version = "1.0.0"
description = "MCP Server for LearnAI tutoring marketplace - exposes professor search, recommendations, and booking tools via Model Context Protocol"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ruslan Magana", email = "ruslanmv@gmail.com" },
]
keywords = ["mcp", "ai", "tutoring", "education", "learnai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.14.4",
    "mcp>=1.26.0",
    "pydantic>=2.5.0",
    "httpx>=0.27.0",
    "orjson>=3.11.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
learnai-mcp = "learnai_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/learnai_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
